# streaming_app

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: video.py
app/config/: __init__.py  main.py
app/config/env_config/: __init__.py  main.py
app/core/config/: main.py
app/core/config/env_config/: __init__.py  main.py
app/core/db/: base.py  connection.py  models.py
app/core/repositories/: video.py
app/core/services/background_tasks_service/: celery.py  logic.py  redis.py  tasks.py
app/core/services/video/: __init__.py  main.py
app/db/: base.py  connection.py  models.py
app/schemas/: video.py
migration/: env.py
migration/versions/: bcdb6ec5e703_using_url_instead_of_playlist_url_in_.py  dc751a215360_iniital_revision.py
