[tool.poetry]
name = "video-streaming-service"
version = "0.1.0"
description = "Simple video streaming service"
authors = ["Kamil Gareev <kamalearningandbusiness@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
asyncpg = "^0.29.0"
aioredis = "^2.0.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
celery = {extras = ["redis"], version = "^5.3.6"}
flower = "^2.0.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"