[project]
name = "video-streaming-service"
version = "0.1.0"
description = "Simple video streaming service"
authors = [
    {name = "Kamil Gareev", email = "kamalearningandbusiness@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (==0.115.12)",
    "uvicorn (==0.34.2)",
    "asyncpg (==0.30.0)",
    "aioredis (==2.0.1)",
    "sqlalchemy (==2.0.41)",
    "alembic (==1.15.2)",
    "dotenv (>=0.9.9)",
    "celery (>=5.5.2)",
    "flower (>=2.0.1)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
